member 버튼 경로 수정, botton 오타 수정, style.css 제대로 적용되게 수정

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
   color: black;
 }
 .right >button{
-  background-color: black;
+  background-color: silver;
   color: black;
 
   padding: 10px 15px;
@@ -35,7 +35,8 @@
   transition: background-color  ease;
 }
 .right >button:hover{
-  background-color: burlywood;
+  background-color: silver;
+  color: white;
 }
 .team-img{
   margin-top: 100px ;
