mbti_input 스타일 변경

--- a/css/style.css
+++ b/css/style.css
@@ -221,3 +221,9 @@
 .team-h1{
   color: white;
 }
+#mbti_input{
+  float: right;
+  border-radius: 25px;
+  border: 2px solid black;
+  height: 30px;
+}
